web-infras/parser/tests/fixtures/esprima/es2018/dynamic-import/invalid-non-callee/output.txt
[SyntaxError]: The only valid meta property for import is import.meta. (1,8)
1|import.then(doLoad);
 |      ^
[SyntaxError]: import.meta may appear only with 'sourceType: "module" (1,1)
1|import.then(doLoad);
 |^
